--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,11 +21,31 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get dependencies
-        run: |
-          go get -v -t -d ./...
+        run: go get -v -t -d ./...
 
       - name: Build
         run: go build -v ./...
 
       - name: Test
         run: go test -v ./...
+
+      - name: Vet
+        run: go vet -v ./...
+
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          args: ./...
+
+      - name: Rurest
+        run: |
+          go get -u golang.org/x/lint/golint
+          golint $(go list ./... )
+          go get honnef.co/go/tools/cmd/staticcheck
+          staticcheck ./...
+          out=$$(gofmt -s -l -d -e $(gofile) | tee /dev/stderr);
+          if [ -n "$$out" ];
+            then exit 1;
+          fi;
+          go get -u github.com/kisielk/errcheck
+          errcheck -verbose ./...
