--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,7 +49,7 @@ jobs:
         run: staticcheck ./...
 
       - name: errcheck
-        run: errcheck -verbose ./...
+        run: errcheck ./...
 
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
